modifying games API
